--- a/architecture/index.html
+++ b/architecture/index.html
@@ -143,7 +143,7 @@
 
         </div>
       </div>
-      <p class="t-intro">
+      <p class="t-intro z-index-top">
         Most of the projects are from my three-year Master of Architecture program. Our main focuses
         were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
         material, tectonic, social, technological, and environmental determinants of building form.
