--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
     <div class="body-landing">
       <div class="body-intro">
-        <div class="t-hello" id="t-hello-1550">HELLO, </div>
+        <div class="t-hello" id="t-hello-1550" >HELLO, </div>
       </div>
-      <div class="body-intro">
+      <div class="body-intro" data-aos="fade-up">
         <div class="body-v">
           <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
         </div>
@@ -141,7 +141,7 @@
           </div>
         </div>
       </div>
-      <p class="t-intro">
+      <p class="t-intro z-index-top" data-aos="fade-up">
         Passionate about translating complex business requirements into compelling user
         experiences.
         While my focus is primarily on design, I don't mind occasionally writing code when the
@@ -163,7 +163,7 @@
     </div>
     <!-- content-->
     <!--ALLTRAILS-->
-    <div class="body-h">
+    <div class="body-h"  id="ytrigger">
 
       <div class="body-left body-img float">
         <a href="/alltrails">
@@ -172,7 +172,7 @@
       </div>
 
       <div class="body-right body-txt">
-        <a href="/alltrails" class="t-title">REDESIGN ALLTRAILS APP</a>
+        <a href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</a>
         <p class="horizontal-line"></p>
 
         <p class="t-text">Spring 2021</p>
@@ -183,9 +183,9 @@
     <br>
 
     <!--MEAL PLANNER-->
-    <div class="body-h">
+    <div class="body-h"  id="ytrigger1">
       <div class="body-right  body-txt">
-        <a href="/meal_planner" class="t-title">MEAL PLANNER</a>
+        <a href="/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
         <p class="horizontal-line"></p>
 
         <p class="t-text">A mobile app helps planning a healthy meal</p>
@@ -201,15 +201,15 @@
     <br>
 
     <!--GARDENERS HUB-->
-    <div class="body-h">
+    <div class="body-h" id="ytrigger2">
       <div class="body-left body-img float">
         <a href="/gardeners_hub">
           <img src="./layout_gardenershub.png" alt="Gardeners' Hub">
         </a>
       </div>
 
-      <div class="body-right body-txt">
-        <a href="/gardeners_hub" class="t-title">GARDENERS HUB</a>
+      <div class="body-right body-txt" >
+        <a href="/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
         <p class="horizontal-line"></p>
         <p class="t-text">A marketplace for local community</p>
         <p class="t-text">Spring 2021</p>
@@ -242,7 +242,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">RECREATION COMMONS</a>
+                <a href="/architecture" class="t-title-m" >RECREATION COMMONS</a>
                 <p class="horizontal-line"></p>
 
                 <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
@@ -266,7 +266,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">NARROW STRIPES</a>
+                <a href="/architecture" class="t-title-m">NARROW STRIPES</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
                 <p class="t-text">Site: Location: Hyde Park, London </p>
@@ -288,7 +288,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">KAPPE HOUSE STUDY </a>
+                <a href="/architecture" class="t-title-m">KAPPE HOUSE STUDY </a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015 </p>
                 <p class="t-text">M. Arch, CED, UC Berkeley </p>
@@ -309,7 +309,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">MANIFOLD GROUND </a>
+                <a href="/architecture" class="t-title-m">MANIFOLD GROUND </a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">[IN]ARCH ADV, SUMMERS 2014</p>
                 <p class="t-text">Summer Program, CED, UC Berkeley</p>
@@ -332,7 +332,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">ON ORDER: DIFFERENTIATED CONTINUITY OF
+                <a href="/architecture" class="t-title-m">ON ORDER: DIFFERENTIATED CONTINUITY OF
                   OBJECTS</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">THESIS STUDIO, FALL 2018 - SPRING 2019</p>
@@ -354,7 +354,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">THE ROTATION OF CURVES</a>
+                <a href="/architecture" class="t-title-m">THE ROTATION OF CURVES</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">Introduction to Architecture Studio 1, Fall 2015</p>
                 <p class="t-text">M. Arch, CED, UC Berkeley</p>
@@ -375,7 +375,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">RECOVERY OF RIVER EDGES</a>
+                <a href="/architecture" class="t-title-m">RECOVERY OF RIVER EDGES</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">Introduction to Architecture Studio 2, Spring 2016</p>
                 <p class="t-text">M. Arch, CED, UC Berkeley</p>
@@ -401,7 +401,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">LACMA</a>
+                <a href="/architecture" class="t-title-m">LACMA</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
                 <p class="t-text">M. Arch, CED, UC Berkeley</p>
@@ -421,7 +421,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title">OTHER ACADEMIC WORKS </a>
+                <a href="/architecture" class="t-title-m">OTHER ACADEMIC WORKS </a>
                 <p class="horizontal-line"></p>
                 <p class="t-text">798 Exhibition Gallery 2010 </p>
                 <p class="t-text">The Renovation of a Factory Building 2013</p>
@@ -473,7 +473,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
+                <p class="t-title-m">Bosque Del Apache National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -493,7 +493,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
+                <p class="t-title-m">Bosque Del Apache National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -513,7 +513,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
+                <p class="t-title-m">Bosque Del Apache National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -534,7 +534,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
+                <p href="/Photography" class="t-title-m">Sacramento National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -555,7 +555,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
+                <p href="/Photography" class="t-title-m">Sacramento National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -575,7 +575,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Sacramento National Wildlife Refuge</p>
+                <p class="t-title-m">Sacramento National Wildlife Refuge</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -595,7 +595,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Teton National Park </p>
+                <p class="t-title-m">Teton National Park </p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">September, 2020</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -616,7 +616,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument</p>
+                <p class="t-title-m">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -637,7 +637,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument</p>
+                <p class="t-title-m">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -659,7 +659,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument</p>
+                <p class="t-title-m">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -681,7 +681,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument </p>
+                <p class="t-title-m">White Sands National Monument </p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -703,7 +703,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument</p>
+                <p class="t-title-m">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -724,7 +724,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument</p>
+                <p class="t-title-m">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -745,7 +745,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">White Sands National Monument</p>
+                <p class="t-title-m">White Sands National Monument</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019</p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -765,7 +765,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Yellowstone National Park</p>
+                <p class="t-title-m">Yellowstone National Park</p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">September, 2020 </p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -785,7 +785,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <p class="t-title">Donner Lake </p>
+                <p class="t-title-m">Donner Lake </p>
                 <p class="horizontal-line"></p>
                 <p class="t-text">December, 2019 </p>
                 <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -818,20 +818,18 @@
     </div>
     <!-- content-->
     <!-- about me-->
-    <div class="t-title body-v">
-      <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/about/Resume.pdf"
+    <div class="t-title-m body-v">
+      <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
         class="text-about-resume"> Download My Resume
       </a>
     </div>
-
-
     <br>
     <div class="about-me">
       <div class="body-v">
-        <div class="body-left t-title-l">
+        <div class="body-left t-title-l" data-aos="fade-up">
           EDUCATION </div>
         <div class="body-v">
-          <p class="t-title">UC Berkeley
+          <p class="t-title-m">UC Berkeley
           </p>
           <p class="t-time">August 2015 - May 2019</p>
           <p class="t-text">Master of Architecture</p>
@@ -839,7 +837,7 @@
         </div>
         <br>
         <div class="body-v">
-          <p class="t-title">Beijing University of Tech</p>
+          <p class="t-title-m">Beijing University of Tech</p>
           <p class="t-time">May 2009 - August 2013 </p>
           <p class="t-text">Bachelor of Art and Design</p>
           <p class="t-text">Landscape Design</p>
@@ -850,11 +848,11 @@
 
 
       <div class="body-v">
-        <div class="body-left t-title-l">
+        <div class="body-left t-title-l" data-aos="fade-up">
           SKILL&TOOLS
         </div>
         <div class="body-v">
-          <p class="t-title">UI/UX
+          <p class="t-title-m">UI/UX
           </p>
           <p class="t-text">Sketch, Adobe XD, Figma</p>
 
@@ -862,7 +860,7 @@
         </div>
 
         <div class="body-v">
-          <p class="t-title">Programming</p>
+          <p class="t-title-m">Programming</p>
           <p class="t-text">HTML, CSS, JavaScript</p>
           <p class="t-text">jQuery</p>
 
@@ -870,13 +868,13 @@
         </div>
 
         <div class="body-v">
-          <p class="t-title">2D Graphic</p>
+          <p class="t-title-m">2D Graphic</p>
           <p class="t-text">Adobe Suite (Illustrator, Photoshop, InDesign)</p>
           <p class="t-text">AutoCAD</p>
         </div>
 
         <div class="body-v">
-          <p class="t-title">3D Modelling and VR</p>
+          <p class="t-title-m">3D Modelling and VR</p>
           <p class="t-text">3Dmax Studio, Rhino, Sketchup</p>
           <p class="t-text">Grasshopper, Ladybug, DIVA</p>
           <p class="t-text">Unity</p>
@@ -884,13 +882,13 @@
         </div>
 
         <div class="body-v">
-          <p class="t-title">Design Research
+          <p class="t-title-m">Design Research
           </p>
           <p class="t-text">Affinity Diagramming</p>
           <p class="t-text">Experience Prototyping</p>
         </div>
         <div class="body-v">
-          <p class="t-title">Fabrication
+          <p class="t-title-m">Fabrication
           </p>
           <p class="t-text">3D Printing, 3D Scanner (NextEngine 3D)</p>
           <p class="t-text">CNC (Techno Isel 3-axis CNC router), </p>
@@ -899,31 +897,31 @@
       </div>
 
       <div class="body-v">
-        <div class="body-left t-title-l">
+        <div class="body-left t-title-l" data-aos="fade-up">
           EXPERIENCE </div>
         <div class="body-v">
-          <p class="t-title">Buro Ole Scheeren</p>
+          <p class="t-title-m">Buro Ole Scheeren</p>
           <p class="t-time">August 2017 - July 2018</p>
           <p class="t-text">Beijing, China</p>
           <p class="t-text">Architectural Designer</p>
         </div>
 
         <div class="body-v">
-          <p class="t-title">In Design Studio</p>
+          <p class="t-title-m">In Design Studio</p>
           <p class="t-time">May 2017 - August 2017</p>
           <p class="t-text">New York, U.S.</p>
           <p class="t-text">Summer Intern</p>
         </div>
 
         <div class="body-v">
-          <p class="t-title">PDI Design Group</p>
+          <p class="t-title-m">PDI Design Group</p>
           <p class="t-time">December 2013 - July 2015</p>
           <p class="t-text">Beijing, China</p>
           <p class="t-text">Architectural Designer</p>
         </div>
 
         <div class="body-v">
-          <p class="t-title">Do Union</p>
+          <p class="t-title-m">Do Union</p>
           <p class="t-time">July 2010 - May 2012</p>
           <p class="t-text">Beijing, China</p>
           <p class="t-text">Architectural Intern</p>
