--- a/photography/index.html
+++ b/photography/index.html
@@ -140,7 +140,7 @@ Interested in what you see? Shoot me an email :) " />
             is my favorite hobby. </div>
         </div>
       </div>
-      <p class="t-intro">
+      <p class="t-intro z-index-top">
         I love to recompose the nature form with a camera. Observing the narrative of nature
         components with my perspective. </p>
     </div>
