--- a/architecture/index.html
+++ b/architecture/index.html
@@ -163,161 +163,156 @@
     </div>
 
     <!--architecture 1-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
+    <div id="ytrigger-arch">
+      <div class="body-h" id="ytrigger-arch">
+        <div class="body-left body-img float">
+          <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
 
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <a class="t-title" href="./recreation_commons">
-          RECREATION COMMONS </a>
-        </p>
-        <p class="horizontal-line"></p>
-        <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
-        <p class="t-text">M. Arch, CED, UC Berkeley</p>
-        <p class="t-text">Instructor: Roddy Creedon</p>
-        <p class="t-text">Duration: One Semester</p>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./recreation_commons">
+            RECREATION COMMONS </a>
+          </p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
+          <p class="t-text">M. Arch, CED, UC Berkeley</p>
+          <p class="t-text">Instructor: Roddy Creedon</p>
+          <p class="t-text">Duration: One Semester</p>
 
-        <p class="t-text">Site: 110 Franklin St. San Francisco, CA, 94102</p>
-        <p class="t-text">Total Floor Area: 22900 s.f. 4 Floors</p>
-
+          <p class="t-text">Site: 110 Franklin St. San Francisco, CA, 94102</p>
+          <p class="t-text">Total Floor Area: 22900 s.f. 4 Floors</p>
+        </div>
       </div>
     </div>
+
     <!--architecture 1-->
     <br> <br> <br>
 
     <!--architecture 2-->
-    <div class="body-h">
+    <div id="ytrigger-arch2">
+      <div class="body-h">
+        <div class="body-left body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
+          <p class="t-text">Duration: Six Weeks </p>
+          <p class="t-text">Site: Location: Hyde Park, London </p>
+          <p class="t-text">7500 square metres approx. </p>
+          <p class="t-text">Maximum Built Area: 4000 square metres </p>
+        </div>
 
-      <div class="body-left body-txt">
-        <a class="t-title" href="./narrow_stripes/"> NARROW STRIPES </a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
-        <p class="t-text">Duration: Six Weeks </p>
-        <p class="t-text">Site: Location: Hyde Park, London </p>
-        <p class="t-text">7500 square metres approx. </p>
-        <p class="t-text">Maximum Built Area: 4000 square metres </p>
-      </div>
-
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <a href="./narrow_stripes/"> <img src="./ar_02.jpg"> </a>
-
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <a href="./narrow_stripes/"> <img src="./ar_02.jpg"> </a>
+        </div>
       </div>
     </div>
     <!--architecture 2-->
     <br> <br> <br>
     <!--THESIS -->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title" href="./thesis_studio/"><img src="./ar_07.jpg"></a>
+    <div id="ytrigger-arch3">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <a href="./thesis_studio/"><img src="./ar_07.jpg"></a>
 
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <a class="t-title" href="./thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
-        </a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
-        <p class="t-text">M. Arch, CED, UC Berkeley</p>
-        <p class="t-text">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
-        <p class="t-text">Duration: Two Semesters</p>
-
-
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF
+            OBJECTS
+          </a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">THESIS STUDIO, ARCH 204 A & B, 2018 - 2019 </p>
+          <p class="t-text">M. Arch, CED, UC Berkeley</p>
+          <p class="t-text">Instructor: Rudabeh Pakravan, Kyle Steinfeld </p>
+          <p class="t-text">Duration: Two Semesters</p>
+        </div>
       </div>
     </div>
     <!--THESIS -->
     <br> <br> <br>
     <!--MANIFOLD GROUND -->
-    <div class="body-h">
-
-      <div class="body-left body-txt">
-        <a class="t-title" href="./manifold_ground/">MANIFOLD GROUND </a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">[IN]ARCH ADV, SUMMERS 2014 </p>
-        <p class="t-text">Summer Program, CED, UC Berkeley </p>
-        <p class="t-text">Instructor: Keith Plymale </p>
-        <p class="t-text">Duration: One Semester</p>
-        <p class="t-text">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+      <div class="body-h" id="ytrigger-arch4">
+        <div class="body-left body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">[IN]ARCH ADV, SUMMERS 2014 </p>
+          <p class="t-text">Summer Program, CED, UC Berkeley </p>
+          <p class="t-text">Instructor: Keith Plymale </p>
+          <p class="t-text">Duration: One Semester</p>
+          <p class="t-text">Site: 450 Hayes St. San Francisco, CA 94102 </p>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
+        </div>
       </div>
-
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <a class="t-title" href="./manifold_ground/"> <img src="./ar_04.jpg"></a>
-
-      </div>
-    </div>
     <!--MANIFOLD GROUND -->
     <br> <br> <br>
 
     <!--architecture 3-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title" href="./recovery_of_river_edges/"> <img src="./ar_03.jpg"></a>
-
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <a class="t-title" href="./recovery_of_river_edges/"> RECOVERY OF RIVER EDGES </a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">Introduction to Architecture Studio 2, Spring 2016 </p>
-        <p class="t-text">M. Arch, CED, UC Berkeley </p>
-        <p class="t-text">Instructor: Jay Atherton </p>
-        <p class="t-text">Duration: One Semester</p>
-        <p class="t-text">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
-        </p>
-
+    <div id="ytrigger-arch5">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <a class="t-title" href="./recovery_of_river_edges/"> <img src="./ar_03.jpg"></a>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF RIVER EDGES </a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">Introduction to Architecture Studio 2, Spring 2016 </p>
+          <p class="t-text">M. Arch, CED, UC Berkeley </p>
+          <p class="t-text">Instructor: Jay Atherton </p>
+          <p class="t-text">Duration: One Semester</p>
+          <p class="t-text">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles, CA 90039
+          </p>
+        </div>
       </div>
     </div>
     <!--architecture 3-->
     <br> <br> <br>
     <!--CURVES-->
-    <div class="body-h">
-      <div class="body-left body-txt">
-        <a class="t-title" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">Introduction to Architecture Studio 1, Fall 2015 </p>
-        <p class="t-text">M. Arch, CED, UC Berkeley </p>
-        <p class="t-text">Instructor: Rudabeh Pakravan </p>
-        <p class="t-text">Duration: One Semester</p>
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-
-      <div class="body-right body-img float">
-        <a class="t-title" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
-
+    <div id="ytrigger-arch6">
+      <div class="body-h">
+        <div class="body-left body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF CURVES </a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">Introduction to Architecture Studio 1, Fall 2015 </p>
+          <p class="t-text">M. Arch, CED, UC Berkeley </p>
+          <p class="t-text">Instructor: Rudabeh Pakravan </p>
+          <p class="t-text">Duration: One Semester</p>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <a class="t-title-l" href="./the_rotation_of_curves/"> <img src="./ar_05.jpg"></a>
+        </div>
       </div>
     </div>
     <!--CURVES-->
     <br> <br> <br>
     <!--LACMA-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
-
+    <div id="ytrigger-arch7">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <a class="t-title-l" href="./LACAMA/"> <img src="./ar_08.jpg"></a>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <a class="t-title-l" data-aos="fade-up" href="./LACAMA/">LACMA</a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
+          <p class="t-text">Instructor: Mark Anderson</p>
+          <p class="t-text">Duration: One Semester</p>
+        </div>
       </div>
-
-      <div class="vertical-line-blank">
-      </div>
-
-      <div class="body-right body-txt">
-        <a class="t-title" href="./LACAMA/">LACMA</a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
-        <p class="t-text">Instructor: Mark Anderson</p>
-        <p class="t-text">Duration: One Semester</p>
-
-      </div>
-
-
-
     </div>
     <!-- LACMA-->
     <br> <br> <br>
@@ -325,25 +320,24 @@
 
 
     <!--architecture 6-->
-    <div class="body-h">
-
-      <div class="body-left body-txt">
-        <p class="t-title">KAPPE HOUSE STUDY </p>
-        <p class="horizontal-line"></p>
-        <p class="t-text">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-        <p class="t-text">M. Arch, CED, UC Berkeley </p>
-        <p class="t-text">Instructor: Yung Ho Chang </p>
-        <p class="t-text">Duration: One Semester, One Unit</p>
-
-      </div>
-
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <img src="./ar_06.jpg">
-
+    <div id="ytrigger-arch8">
+      <div class="body-h">
+        <div class="body-left body-txt">
+          <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
+          <p class="t-text">M. Arch, CED, UC Berkeley </p>
+          <p class="t-text">Instructor: Yung Ho Chang </p>
+          <p class="t-text">Duration: One Semester, One Unit</p>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <img src="./ar_06.jpg">
+        </div>
       </div>
     </div>
+
     <!--architecture 6-->
     <br> <br> <br>
 
