--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 
   <!--body-->
   <div class="body-margin">
-    <br>    <br>    <br>    <br>
+    <br> <br> <br> <br>
 
 
 
     <div class="body-landing">
       <div class="body-intro">
-        <div class="t-hello" id="t-hello-1550" >HELLO, </div>
+        <div class="t-hello" id="t-hello-1550">HELLO, </div>
       </div>
       <div class="body-intro" data-aos="fade-up">
         <div class="body-v">
@@ -162,61 +162,72 @@
       <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <!--ALLTRAILS-->
-    <div class="body-h"  id="ytrigger">
+    <!--GARDENERS HUB-->
+    <div id="ytrigger">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <a href="/gardeners_hub">
+            <img src="./layout_gardenershub.png" alt="Gardeners' Hub">
+          </a>
+        </div>
 
-      <div class="body-left body-img float">
-        <a href="/alltrails">
-          <img src="../layout_alltrails.png" alt="Redesign AllTrails">
-        </a>
+        <div class="body-right body-txt">
+          <a href="/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
+          <p class="horizontal-line"></p>
+          <p class="t-text">A marketplace for local community</p>
+          <p class="t-text">Spring 2021</p>
+        </div>
       </div>
 
-      <div class="body-right body-txt">
-        <a href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</a>
-        <p class="horizontal-line"></p>
-
-        <p class="t-text">Spring 2021</p>
-      </div>
     </div>
-    <!--ALLTRAILS-->
+
+    <!--GARDENERS HUB-->
+
 
     <br>
 
     <!--MEAL PLANNER-->
-    <div class="body-h"  id="ytrigger1">
-      <div class="body-right  body-txt">
-        <a href="/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
-        <p class="horizontal-line"></p>
+    <div id="ytrigger1">
 
-        <p class="t-text">A mobile app helps planning a healthy meal</p>
-        <p class="t-text">Spring 2021</p>
-      </div>
-      <div class="body-left body-img float">
-        <a href="/meal_planner">
-          <img src="./layout_mealplanner.png" alt="Meal Planner">
-        </a>
+      <div class="body-h">
+        <div class="body-right  body-txt">
+          <a href="/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
+          <p class="horizontal-line"></p>
+
+          <p class="t-text">A mobile app helps planning a healthy meal</p>
+          <p class="t-text">Spring 2021</p>
+        </div>
+        <div class="body-left body-img float">
+          <a href="/meal_planner">
+            <img src="./layout_mealplanner.png" alt="Meal Planner">
+          </a>
+        </div>
       </div>
     </div>
+
     <!--MEAL PLANNER-->
     <br>
+    <!--ALLTRAILS-->
+    <div id="ytrigger2">
 
-    <!--GARDENERS HUB-->
-    <div class="body-h" id="ytrigger2">
-      <div class="body-left body-img float">
-        <a href="/gardeners_hub">
-          <img src="./layout_gardenershub.png" alt="Gardeners' Hub">
-        </a>
+      <div class="body-h">
+
+        <div class="body-left body-img float">
+          <a href="/alltrails">
+            <img src="../layout_alltrails.png" alt="Redesign AllTrails">
+          </a>
+        </div>
+
+        <div class="body-right body-txt">
+          <a href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</a>
+          <p class="horizontal-line"></p>
+
+          <p class="t-text">Spring 2021</p>
+        </div>
       </div>
-
-      <div class="body-right body-txt" >
-        <a href="/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
-        <p class="horizontal-line"></p>
-        <p class="t-text">A marketplace for local community</p>
-        <p class="t-text">Spring 2021</p>
-      </div>
-
     </div>
-    <!--GARDENERS HUB-->
+    <!--ALLTRAILS-->
+
 
     <div class="body-h">
       <p class="vertical-line ver2"></p>
@@ -242,7 +253,7 @@
           <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/architecture" class="t-title-m" >RECREATION COMMONS</a>
+                <a href="/architecture" class="t-title-m">RECREATION COMMONS</a>
                 <p class="horizontal-line"></p>
 
                 <p class="t-text">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
@@ -939,7 +950,7 @@
 
 
 
-    
+
     <br>
 
 
