--- a/photography/index.html
+++ b/photography/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="../../scripts.js"></script>
 
 
 
@@ -157,111 +157,129 @@ Interested in what you see? Shoot me an email :) " />
     </div>
 
     <!--Photo 1-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img src="./01.jpg">
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+    <div id="ytrigger-pg">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <img src="./01.jpg">
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">December, 2019</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
       </div>
     </div>
+
     <!--Photo 1-->
     <br> <br> <br>
 
     <!--Photo 2-->
-    <div class="body-h">
+    <div id="ytrigger-pg2">
 
-      <div class="body-left body-txt">
-        <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      <div class="body-h">
+        <div class="body-left body-txt">
+          <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">December, 2019</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
+
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <img src="./02.jpg">
+        </div>
       </div>
 
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <img src="./02.jpg">
-      </div>
     </div>
     <!--Photo 2-->
     <br> <br> <br>
 
     <!--Photo 3-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img src="./03.jpg">
+    <div id="ytrigger-pg3">
+      <div class="body-h" >
+        <div class="body-left body-img float">
+          <img src="./03.jpg">
 
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">December, 2019</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
       </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <p class="t-title">Bosque Del Apache National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-      </div>
+
     </div>
     <!--Photo 3-->
     <br> <br> <br>
 
     <!--Photo 4-->
-    <div class="body-h">
+    <div>
 
-      <div class="body-left body-txt">
-        <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-      </div>
+      <div class="body-h" id="ytrigger-pg4">
 
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <img src="./04.jpg">
+        <div class="body-left body-txt">
+          <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">December, 2019</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
 
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <img src="./04.jpg">
+
+        </div>
       </div>
     </div>
+
     <!--Photo 4-->
     <br> <br> <br>
 
     <!--Photo 5-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img src="./05.jpg">
+    <div >
+      <div class="body-h" id="ytrigger-pg5">
+        <div class="body-left body-img float">
+          <img src="./05.jpg">
 
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">December, 2019</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
       </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <p href="/Photography" class="t-title">Sacramento National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-      </div>
+
     </div>
     <!--Photo 5-->
     <br> <br> <br>
 
     <!--Photo 6-->
-    <div class="body-h">
+    <div id="ytrigger-pg6">
 
-      <div class="body-left body-txt">
-        <p class="t-title">Sacramento National Wildlife Refuge</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-      </div>
+      <div class="body-h">
+        <div class="body-left body-txt">
+          <p class="t-title-l">Sacramento National Wildlife Refuge</p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">December, 2019</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
 
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <img src="./06.jpg">
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-img float">
+          <img src="./06.jpg">
+        </div>
 
       </div>
     </div>
@@ -269,47 +287,56 @@ Interested in what you see? Shoot me an email :) " />
     <br> <br> <br>
 
     <!--Photo 7-->
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img src="./07.jpg">
+    <div id="ytrigger-pg7">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <img src="./07.jpg">
 
-      </div>
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-txt">
-        <p class="t-title">Teton National Park </p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">September, 2020</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
+        <div class="vertical-line-blank">
+        </div>
+        <div class="body-right body-txt">
+          <p class="t-title-l">Teton National Park </p>
+          <p class="horizontal-line"></p>
+          <p class="t-text">September, 2020</p>
+          <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        </div>
       </div>
     </div>
-    <!--Photo 7-->
-    <br> <br> <br>
 
-    <!--Photo 8-->
+  </div>
+  <!--Photo 7-->
+  <br> <br> <br>
+
+  <!--Photo 8-->
+  <div id="ytrigger-pg8">
+
     <div class="body-h">
 
       <div class="body-left body-txt">
-        <p class="t-title">White Sands National Monument</p>
+        <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
         <img src="./08.jpg">
-
       </div>
+
     </div>
-    <!--Photo 8-->
+  </div>
+  <!--Photo 8-->
 
 
 
-    <br> <br> <br>
+  <br> <br> <br>
 
-    <!--Photo 9-->
+  <!--Photo 9-->
+  <div id="ytrigger-pg9">
+
     <div class="body-h">
       <div class="body-left body-img float">
         <img src="./09.jpg">
@@ -318,23 +345,26 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title">White Sands National Monument</p>
+        <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
-    <!--Photo 9-->
-    <br> <br> <br>
+  </div>
+  <!--Photo 9-->
+  <br> <br> <br>
 
-    <!--Photo 10-->
+  <!--Photo 10-->
+  <div id="ytrigger-pg10">
+
     <div class="body-h">
 
       <div class="body-left body-txt">
-        <p class="t-title">White Sands National Monument</p>
+        <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
@@ -344,10 +374,13 @@ Interested in what you see? Shoot me an email :) " />
 
       </div>
     </div>
-    <!--Photo 10-->
-    <br> <br> <br>
+  </div>
+  <!--Photo 10-->
+  <br> <br> <br>
 
-    <!--Photo 11-->
+  <!--Photo 11-->
+  <div id="ytrigger-pg11">
+
     <div class="body-h">
       <div class="body-left body-img float">
         <img src="./11.jpg">
@@ -356,39 +389,43 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title">White Sands National Monument </p>
+        <p class="t-title-l">White Sands National Monument </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
-    <!--Photo 11-->
-    <br> <br> <br>
+  </div>
+  <!--Photo 11-->
+  <br> <br> <br>
 
-    <!--Photo 12-->
-    <div class="body-h">
+  <!--Photo 12-->
 
-      <div class="body-left body-txt">
-        <p class="t-title">White Sands National Monument</p>
-        <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-      </div>
-
-      <div class="vertical-line-blank">
-      </div>
-      <div class="body-right body-img float">
-        <img src="./12.jpg">
-
-      </div>
+  <div class="body-h" id="ytrigger-pg12">
+    <div class="body-left body-txt">
+      <p class="t-title-l">White Sands National Monument</p>
+      <p class="horizontal-line"></p>
+      <p class="t-text">December, 2019</p>
+      <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
     </div>
-    <!--Photo 12-->
+
+    <div class="vertical-line-blank">
+    </div>
+    <div class="body-right body-img float">
+      <img src="./12.jpg">
+
+    </div>
+  </div>
+
+  <!--Photo 12-->
 
 
 
-    <br> <br> <br>
+  <br> <br> <br>
 
-    <!--Photo 13-->
+  <!--Photo 13-->
+  <div id="ytrigger-pg13">
+
     <div class="body-h">
       <div class="body-left body-img float">
         <img src="./13.jpg">
@@ -397,23 +434,26 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title">White Sands National Monument</p>
+        <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
-    <!--Photo 13-->
-    <br> <br> <br>
+  </div>
+  <!--Photo 13-->
+  <br> <br> <br>
 
-    <!--Photo 14-->
+  <!--Photo 14-->
+  <div id="ytrigger-pg14">
+
     <div class="body-h">
 
       <div class="body-left body-txt">
-        <p class="t-title">White Sands National Monument</p>
+        <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
 
       </div>
 
@@ -424,11 +464,14 @@ Interested in what you see? Shoot me an email :) " />
 
       </div>
     </div>
-    <!--Photo 14-->
+  </div>
+  <!--Photo 14-->
 
-    <br> <br> <br>
+  <br> <br> <br>
 
-    <!--Photo 15-->
+  <!--Photo 15-->
+  <div id="ytrigger-pg15">
+
     <div class="body-h">
       <div class="body-left body-img float">
         <img src="./15.jpg">
@@ -437,23 +480,26 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title">Yellowstone National Park</p>
+        <p class="t-title-l">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">September, 2020 </p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">September, 2020 </p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
-    <!--Photo 15-->
-    <br> <br> <br>
+  </div>
+  <!--Photo 15-->
+  <br> <br> <br>
 
-    <!--Photo 16-->
+  <!--Photo 16-->
+  <div id="ytrigger-pg16">
+
     <div class="body-h">
 
       <div class="body-left body-txt">
-        <p class="t-title">Taos Pueblo Indian Reservation</p>
+        <p class="t-title-l">Taos Pueblo Indian Reservation</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
@@ -463,12 +509,15 @@ Interested in what you see? Shoot me an email :) " />
 
       </div>
     </div>
-    <!--Photo 16-->
+  </div>
+  <!--Photo 16-->
 
 
-    <br> <br> <br>
+  <br> <br> <br>
 
-    <!--Photo 17-->
+  <!--Photo 17-->
+  <div id="ytrigger-pg17">
+
     <div class="body-h">
       <div class="body-left body-img float">
         <img src="./17.jpg">
@@ -477,23 +526,26 @@ Interested in what you see? Shoot me an email :) " />
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-txt">
-        <p class="t-title">Donner Lake </p>
+        <p class="t-title-l">Donner Lake </p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019   </p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019 </p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
-    <!--Photo 17-->
-    <br> <br> <br>
+  </div>
+  <!--Photo 17-->
+  <br> <br> <br>
 
-    <!--Photo 18-->
+  <!--Photo 18-->
+  <div id="ytrigger-pg18">
+
     <div class="body-h">
 
       <div class="body-left body-txt">
-        <p class="t-title">Taos Pueblo Indian Reservation</p>
+        <p class="t-title-l">Taos Pueblo Indian Reservation</p>
         <p class="horizontal-line"></p>
-        <p class="t-subtitle">December, 2019</p>
-        <p class="t-subtitle">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+        <p class="t-text">December, 2019</p>
+        <p class="t-text">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
 
       <div class="vertical-line-blank">
@@ -503,27 +555,10 @@ Interested in what you see? Shoot me an email :) " />
 
       </div>
     </div>
-    <!--Photo 18-->
-
-
-
-
-
-
-
-
-
   </div>
+  <!--Photo 18-->
 
 
-
-
-
-
-
-
-
-  </div>
   <!--back to top-->
   <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
